@@ -10,6 +10,8 @@
 - added: `RUN()` for executing multiple Total.js operations
 - added: a new global alias `CONF` (it's a reference to config) for `F.config`
 - added: `DatabaseBuilder.arg(key, value)` for adding an dynamic argument
+- added: NOSQL/TABLE modify supports a new type `$age: 'js_code'` with some JS code
+- added: NOSQL/TABLE update supports a new type `'js_code'` with some JS code
 
 - updated: `debug` mode creates a `start_name_script.pid` instead of `debug.pid`
 - updated: `NEWOPERATION()` supports `repeat` and `stop` argument
